# langchain-nextjs-fastapi-template

./: .coverage  .env.sample  .gitignore  CLAUDE.md  DOCKER.md  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml
app/: app.py  database.py  main.py  models.py  schemas.py  security.py  settings.py
app/routers/: auth.py  pages.py  todos.py  users.py
app/routers/api/: __init__.py  auth.py  todos.py  users.py
app/routers/web/: __init__.py  auth.py  pages.py  users.py
app/templates/: base.html  index.html  login.html  register.html  unauthorized.html  user_profile.html  user_profile_edit.html  users.html
app/templates/partials/: home_partial.html  login_partial.html  register_partial.html  register_success_partial.html  user_profile_edit_partial.html  user_profile_partial.html  users_partial.html
backend/: .coverage  .env.example  .gitignore  Dockerfile  docker-compose.yaml  entrypoint.sh  pyproject.toml
backend/app/: database.py  main.py  models.py  schemas.py  security.py  settings.py  utils.py
backend/app/agents/: rag.py  rag_hybrid.py  rag_hybrid_dev.py
backend/app/routers/: chat.py  projects.py  users.py
backend/app/services/: __init__.py  conversation_service.py  embedding_service.py  file_content_service.py  pdf_processing_service.py
backend/app/services/llm/: README.md  __init__.py  base.py  llm_factory.py  ollama_provider.py  openai_provider.py  serpro_provider.py
backend/migrations/: env.py
backend/migrations/versions/: 59d97274bc3a_add_conversations_table.py  8c5854ee8bad_create_initial_tables.py
backend/tests/: conftest.py  test_auth.py  test_db.py  test_embedding_service.py  test_file_content_service.py  test_pdf_processing_service.py  test_projects.py  test_rag.py  test_security.py  test_users.py  test_utils.py
frontend/: Dockerfile  FEATURES.md  README.md  next.config.mjs  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/users/: page.tsx
frontend/app/login/: page.tsx
frontend/app/password-recovery/: page.OLD  page.tsx
frontend/app/password-recovery/confirm/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/projects/: page.tsx
frontend/app/projects/chat/: page copy.tsx  page.tsx
frontend/app/register/: page.tsx
frontend/components/: Header.tsx  llm-selector.tsx
frontend/static/: index.html
frontend/templates/: users.jinja
migrations/versions/: 07a1c998f064_create_users_table.py  13ec57e0c3d1_novo_campo_updated_at_na_tabela_user.py  1b09f5abfa91_create_todos_table.py  64f1edf9893f_initial_schema.py  a9e6e5634e97_add_is_admin_to_user_model.py  ed3fbffd47ff_novo_campo_updated_at_na_tabela_user.py  f065dd69d351_add_is_admin_to_user_model.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
